--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-	<title> Welcome Folks </title>
+	<title> DHEEPAK KAMAL </title>
 </head>
 <body>
+	<p> Website is for sale. contact dheepakkamal@gmail.com</p>
 
-
-	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfihF3Rzv3FCd8wCTZAEMipaduS-vAnwl_Dx2H3yYBOigEKWg/viewform?c=0&w=1" Feedback </a>
+	
 </body>
 </html>
