--- a/intro.html
+++ b/intro.html
@@ -1,10 +1,7 @@
 <html>
 <head>
-	<title> Welcome Folks </title>
+	<title> Dheepakkamal </title>
 </head>
 <body>
-
-
-	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfihF3Rzv3FCd8wCTZAEMipaduS-vAnwl_Dx2H3yYBOigEKWg/viewform?c=0&w=1" Feedback </a>
-</body>
+<p> Website is for sale. contact dheepakkamal@gmail.com </p>
 </html>
