--- a/index.html
+++ b/index.html
@@ -1,10 +1,363 @@
+<!DOCTYPE html>
 <html>
-<head>
-	<title> DHEEPAK KAMAL </title>
-</head>
-<body>
-	<p> Website is for sale. contact dheepakkamal@gmail.com </p>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Dheepak kamal Prakash</title>
+<!--
+Moonlight Template
+https://templatemo.com/tm-512-moonlight
+-->
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-	
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/fontAwesome.css">
+        <link rel="stylesheet" href="css/light-box.css">
+        <link rel="stylesheet" href="css/templatemo-main.css">
+
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+
+        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            .fa {
+              padding: 20px;
+              font-size: 30px;
+              width: 75px;
+              text-align: center;
+              text-decoration: none;
+              margin: 5px 2px;
+            }
+
+            .fa:hover {
+                opacity: 0.7;
+            }
+
+            .fa-facebook {
+              background: #3B5998;
+              color: white;
+            }
+
+            .fa-github {
+              background: #3B5998;
+              color: white;
+            }
+
+            .fa-twitter {
+              background: #55ACEE;
+              color: white;
+            }
+
+            .fa-linkedin {
+              background: #007bb5;
+              color: white;
+            }
+            .fa-instagram {
+              background: #125688;
+              color: white;
+            }
+
+    </style>
+    </head>
+
+<body>
+
+    <div class="sequence">
+
+      <div class="seq-preloader">
+        <svg width="39" height="16" viewBox="0 0 39 16" xmlns="http://www.w3.org/2000/svg" class="seq-preload-indicator"><g fill="#F96D38"><path class="seq-preload-circle seq-preload-circle-1" d="M3.999 12.012c2.209 0 3.999-1.791 3.999-3.999s-1.79-3.999-3.999-3.999-3.999 1.791-3.999 3.999 1.79 3.999 3.999 3.999z"/><path class="seq-preload-circle seq-preload-circle-2" d="M15.996 13.468c3.018 0 5.465-2.447 5.465-5.466 0-3.018-2.447-5.465-5.465-5.465-3.019 0-5.466 2.447-5.466 5.465 0 3.019 2.447 5.466 5.466 5.466z"/><path class="seq-preload-circle seq-preload-circle-3" d="M31.322 15.334c4.049 0 7.332-3.282 7.332-7.332 0-4.049-3.282-7.332-7.332-7.332s-7.332 3.283-7.332 7.332c0 4.05 3.283 7.332 7.332 7.332z"/></g></svg>
+      </div>
+
+    </div>
+
+
+        <nav>
+          <!-- <div class="logo">
+              <img src="img/logo.jpg" alt="">
+          </div>
+          <div class="mini-logo">
+              <img src="img/mini_logo.png" alt="">
+          </div> -->
+          <ul>
+            <li><a href="#1"><i class="fa_changed fa-home"></i> <em>Home</em></a></li>
+            <li><a href="#2"><i class="fa_changed fa-user"></i> <em>About</em></a></li>
+            <li><a href="#3"><i class="fa_changed fa-pencil"></i> <em>Education</em></a></li>
+            <li><a href="#4"><i class="fa_changed fa-image"></i> <em>Projects</em></a></li>
+            <li><a href="#5"><i class="fa_changed fa-envelope"></i> <em>Contact</em></a></li>
+          </ul>
+        </nav>
+
+        <div class="slides">
+          <div class="slide" id="1">
+            <div class="content first-content">
+              <div class="container-fluid">
+                  <div class="col-md-3">
+                      <div class="author-image"><img src="img/author_image.jpg" alt="Author Image"></div>
+                  </div>
+                  <div class="col-md-9">
+                      <h2>Dheepak kamal Prakash</h2>
+                      <p>Software Developer, Chess player, Travelholic, Aquaphile, Foodie, Sport buff, Moviebuff and much more...</p>
+                      <div class="main-btn"><a href="#2">Read More</a></div>
+                      <div >
+                        <a target="_blank" href="https://www.linkedin.com/in/dheepakkamal/" class="fa fa-linkedin"></a>
+                        <a target="_blank" href="https://github.com/Dheepakkamal" class="fa fa-github"></a>
+                        <a target="_blank" href="https://www.instagram.com/dheepakkamal/" class="fa fa-instagram"></a>
+                        <a target="_blank" href="https://twitter.com/Dheepakkamal1" class="fa fa-twitter"></a>
+                        <a target="_blank" href="https://www.facebook.com/Dheepakkamal/" class="fa fa-facebook"></a>
+                      </div>
+
+
+                      <!-- <div class="fb-btn"><a rel="nofollow" target="_blank" href="https://www.instagram.com/dheepakkamal/">Instagram</a></div>
+                      <div class="fb-btn"><a rel="nofollow" target="_blank" href="https://www.linkedin.com/in/dheepakkamal/">Linkedin</a></div>
+                      <div class="fb-btn"><a rel="nofollow" target="_blank" href="https://twitter.com/Dheepakkamal1">Twitter</a></div>
+                      <div class="fb-btn"><a rel="nofollow" target="_blank" href="https://www.facebook.com/Dheepakkamal/">Facebook</a></div> -->
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="slide" id="2">
+            <div class="content second-content">
+                <div class="container-fluid">
+                    <div class="col-md-6">
+                        <div class="left-content">
+                            <h2>About</h2>
+                            <p>I was in 7th grade, I came to know about the completion of apple and microsoft in tech products.
+                               Kids of my age planned to buy that products but I planned of building a new company like them.
+                                That is when my thirst for new technology began.
+                              </p>
+                              <p>Since then I decided I wanted to be a developer.</p>
+                              <p>I studied computer science in my high school and Information technology in my Bachelor's degree.</p>
+                              <p>Believing one day I will create a legacy of my own...</p>
+                          <div class="main-btn"><a href="#3">Read More</a></div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="right-image">
+                          <img src="img/about_image.jpg" alt="">
+                      </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="slide" id="3">
+            <div class="content third-content">
+                <div class="container-fluid">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="first-section">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="left-content">
+                                                <h2>SSLC/10th Grade</h2>
+                                                <p>School : Carmel Matriculation Higher Secondary School, Erode, TN, India</p>
+                                                <p>Percentage : 94%</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="second-section">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                          <div class="left-content">
+                                              <h2>HSC/12th Grade</h2>
+                                              <p>School : Bharathi Vidya Bhavan Matriculation Higher Secondary School, Erode, TN, India</p>
+                                              <p>Percentage : 84%</p>
+                                          </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="second-section">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                          <div class="left-content">
+                                              <h2>Bachelor's Degree</h2>
+                                              <p>College : Sona college of Technology, Salem, TN, India</p>
+                                              <p>Degree : B.Tech(Information Technology)</p>
+                                              <p>CGPA : 8.0</p>
+                                              <div class="main-btn"><a href="#4">Continue Reading</a></div>
+                                          </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="slide" id="4">
+            <div class="content fourth-content">
+                <div class="container-fluid">
+                    <div class="row">
+
+                        <div class="col-md-4 col-sm-6">
+                            <div class="item">
+                                <div class="thumb">
+                                    <a href="img/travelth_desc.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                        <div class="hover-content">
+                                            <h2>Travelth</h2>
+                                        </div>
+                                    </div></a>
+                                    <div class="image">
+                                        <img src="img/travelth.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="item">
+                                <div class="thumb">
+                                    <a href="img/edublock_desc.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                        <div class="hover-content">
+                                            <h2>EduBlock</h2>
+                                        </div>
+                                    </div></a>
+                                    <div class="image">
+                                        <img src="img/edublock.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="item">
+                                <div class="thumb">
+                                    <a href="img/natural disaster_desc.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                        <div class="hover-content">
+                                            <h2>Natural disaster analysis using AI</h2>
+                                        </div>
+                                    </div></a>
+                                    <div class="image">
+                                        <img src="img/natural disaster.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="item">
+                                <div class="thumb">
+                                    <a href="img/weed_plant_desc.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                        <div class="hover-content">
+                                            <h2>Weed plant detection using AI</h2>
+                                        </div>
+                                    </div></a>
+                                    <div class="image">
+                                        <img src="img/weed plant.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="item">
+                                <div class="thumb">
+                                    <a href="img/ptt_desc.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                        <div class="hover-content">
+                                            <h2>Project tracking tool</h2>
+                                        </div>
+                                    </div></a>
+                                    <div class="image">
+                                        <img src="img/ptt.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="slide" id="5">
+            <div class="content third-content">
+                <div class="container-fluid">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="first-section">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="left-content">
+
+                                                <h2>Email : mail@dheepak.com</h2><br>
+                                                <a target="_blank" href="https://www.linkedin.com/in/dheepakkamal/" class="fa fa-linkedin"></a>
+                                                <a target="_blank" href="https://github.com/Dheepakkamal" class="fa fa-github"></a>
+                                                <a target="_blank" href="https://www.instagram.com/dheepakkamal/" class="fa fa-instagram"></a>
+                                                <a target="_blank" href="https://twitter.com/Dheepakkamal1" class="fa fa-twitter"></a>
+                                                <a target="_blank" href="https://www.facebook.com/Dheepakkamal/" class="fa fa-facebook"></a>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+
+        <div class="footer">
+          <div class="content">
+              <p>mail@dheepak.com</p>
+          </div>
+        </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+    <script src="js/vendor/bootstrap.min.js"></script>
+
+    <script src="js/datepicker.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <script type="text/javascript">
+    $(document).ready(function() {
+
+
+
+        // navigation click actions
+        $('.scroll-link').on('click', function(event){
+            event.preventDefault();
+            var sectionID = $(this).attr("data-id");
+            scrollToID('#' + sectionID, 750);
+        });
+        // scroll to top action
+        $('.scroll-top').on('click', function(event) {
+            event.preventDefault();
+            $('html, body').animate({scrollTop:0}, 'slow');
+        });
+        // mobile nav toggle
+        $('#nav-toggle').on('click', function (event) {
+            event.preventDefault();
+            $('#main-nav').toggleClass("open");
+        });
+    });
+    // scroll function
+    function scrollToID(id, speed){
+        var offSet = 0;
+        var targetOffset = $(id).offset().top - offSet;
+        var mainNav = $('#main-nav');
+        $('html,body').animate({scrollTop:targetOffset}, speed);
+        if (mainNav.hasClass("open")) {
+            mainNav.css("height", "1px").removeClass("in").addClass("collapse");
+            mainNav.removeClass("open");
+        }
+    }
+    if (typeof console === "undefined") {
+        console = {
+            log: function() { }
+        };
+    }
+    </script>
 </body>
 </html>
