--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-512-moonlight
                     <div class="col-md-6">
                         <div class="left-content">
                             <h2>About</h2>
-                            <p>I was in 7th grade, I came to know about the completion of apple and microsoft in tech products.
+                            <p>I was in 9th grade, I came to know about the rivalry of apple and microsoft in tech products.
                                Kids of my age planned to buy that products but I planned of building a new company like them.
                                 That is when my thirst for new technology began.
                               </p>
